# catifier

./: .gitignore  Dockerfile.backend  Dockerfile.frontend  README.md  catifier-service-account.json  docker-compose.yml  main.tf  package-lock.json  pyproject.toml  start.sh  terraform-service-account.json  test.py
.github/actions/discord-message/: action.yaml
.github/actions/docker-image/: action.yml
.github/actions/terraform/: action.yaml
.github/actions/test-python/: action.yaml
.github/actions/vercel/: action.yml
.github/workflows/: ci.yml
frontend/: .gitignore  package-lock.json  package.json
frontend/src/components/auth/: login-modal.tsx
frontend/src/components/pages/: landing-page.tsx
frontend/src/components/ui/: header.tsx
frontend/src/hooks/: useUser.ts
frontend/src/lib/: utils.ts
frontend/src/lib/services/images-service/: index.ts
frontend/src/pages/: index.tsx
frontend/src/pages/api/: [...path].ts  generate.ts
frontend/src/pages/auth/: signout.tsx
frontend/src/styles/: globals.css
frontend/src/types/: next-auth.d.ts
src/catifier/: __main__.py  ai.py  app.py  constants.py  logger.py  prompts.py  storage.py
src/catifier/auth/: constants.py  database.py  models.py  router.py  utils.py
src/catifier/auth/decorators/: decorators.py
src/catifier/auth/jwt_handler/: jwt_handler.py
src/catifier/auth/user_manager/: user_manager.py
src/catifier/tests/: conftest.py
src/catifier/tests/auth/: test_routes.py
src/catifier/tests/image/: test_routes.py
src/catifier/tests/utils/: database.py
terraform/: main.tf
(+3 files in other folders)
